k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crm
  labels:
    name: crm
    environment: production
